--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ h2 {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    width: 300px;
+    width: 500px;
     max-width: 80%;
 
 }
@@ -259,17 +259,17 @@ h2 {
    font-size: 1.5em;
    font-weight: bold;
 }
-.clear-button {
+.clear-button, #quick-list {
     background-color: #4d7701;
     color: white;
-    width: 100%;
+    width: 90%;
     font-size: .7em;
     padding: .5em 2em;
-    margin-left: .5em;
+    margin: .5em;
     border: 2px solid #4d7701;
 }
 
-.clear-button:hover {
+.clear-button:hover, #quick-list:hover {
     cursor: pointer;
     color: #4d7701;
     background-color: #eeeeee;
