--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ h2 {
    font-size: 1.5em;
    font-weight: bold;
 }
-.clear-button, #quick-list {
+.clear-button, #quick-list, #sort-list {
     background-color: #4d7701;
     color: white;
     width: 90%;
