--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ h2 {
    font-size: 1.5em;
    font-weight: bold;
 }
-.clear-button, #quick-list, #sort-list {
+.reset, #quick-list, #sort-list {
     background-color: #4d7701;
     color: white;
     width: 90%;
@@ -269,7 +269,7 @@ h2 {
     border: 2px solid #4d7701;
 }
 
-.clear-button:hover, #quick-list:hover {
+.reset:hover, #quick-list:hover {
     cursor: pointer;
     color: #4d7701;
     background-color: #eeeeee;
