--- a/style.css
+++ b/style.css
@@ -233,36 +233,44 @@ h2 {
     font-weight: bold;
 }
 
-
-/*filter options */
-.filter-section, .sorting {
+.toolbar {
     display: flex;
     flex-direction: row;
-    margin: 1em auto;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
+    margin: 1em;
+}
+/*filter options */
+.filter-section {
+    display: flex;
+    flex-direction: row;
+    gap: .5em;
+}
+.sorting {
+    display: flex;
+    flex-direction: row; 
+    font-size: .7em;
 }
 
-.filter-options {
-    width: 500px;
-    max-width: 80%;
-
+.search-bar {
+    width: 250px;
+}
+.search-input {
+    border: 1px solid #4d7701;
+    padding: 0;
+    width: 20px;
 }
 
-.reset, #quick-list {
+.reset, #quick-list, .sort-options {
     background-color: #4d7701;
     color: white;
     width: 90%;
-    font-size: .7em;
+    font-size: 11px;
     padding: .5em 2em;
-    margin: .5em;
     border: 1px solid #4d7701;
 }
 
-.sorting {
- 
-    
-}
+
 
 .reset:hover, #quick-list:hover {
     cursor: pointer;
