--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     background-color: var(--off-white);
+    /* background-image: url(/images/Allaine.jpg); */
 
 }
 
@@ -317,6 +318,7 @@ h2 {
     font-size: 1rem;
     line-height: 0.8rem;
     text-decoration: none;
+
 }
 .showTotal {
     color: white;
